# RRC

./: .gitignore  README.md
backend/: .env-template  pyproject.toml  req.txt
backend/crewai/: constants.py  global_vars.py  server.py  start_crews.py
backend/crewai/config/: agents.yaml  llm.py  tasks.yaml
backend/crewai/crews/: story_builder_crew.py  tasks_planner_crew.py
backend/crewai/setup/: Llama3.1Modelfile  Llama3.2Modelfile  create-llama3.1-model-file.sh  create-llama3.2-model-file.sh
backend/crewai/tools/: get_time_tool.py  human_input_tool.py
frontend/: .env-template  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Home.js  index.css
frontend/src/components/: constants.js  messages-block.jsx
frontend/src/components/utilities/: add-message.js
frontend/src/css/: Home.css
